<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judul" />

    <Button
        android:id="@+id/btn_move_addnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_number" />

    <Button
        android:id="@+id/btn_move_addtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_text" />

    <Button
        android:id="@+id/btn_move_ruangkubus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_ruangkubus" />

</LinearLayout>